# treerings

./: .python-version  README.md  __init__.py  convert2flat.py  convert2raw.py  pyproject.toml  treerings.py  treerings.pyw
src/dendrochron_fmt/: __init__.py  convert2flat.py  dendrochron_fmt.py  treerings.py
src/tridat/: __init__.py  treerings.py  tucson.py
testdata/: example2.rwl  example3.txt
tests/: __init__.py  test_tucson.py
tests/data/: example.rwl  mn008-noaa.rwl  mn008.rwl  mn019-noaa.rwl  mn019.rwl
